Fix horizontal scrolling

--- a/src/components/UniversalCarousel/UniversalCarousel.scss
+++ b/src/components/UniversalCarousel/UniversalCarousel.scss
@@ -3,6 +3,9 @@
 .universal-carousel {
   padding: v.$spacing-12 0;
   background: v.$neutral-100;
+  width: 100%;
+  max-width: 100vw;
+  overflow: hidden;
 
   @media (max-width: v.$breakpoint-md) {
     padding: v.$spacing-10 0;
@@ -72,13 +75,9 @@
       gap: v.$spacing-4;
     }
     
-    // На мобільних виходимо за межі контейнера для повної ширини
     @media (max-width: v.$breakpoint-sm) {
-      margin-left: calc(-1 * v.$spacing-4);
-      margin-right: calc(-1 * v.$spacing-4);
-      padding-left: v.$spacing-4;
-      padding-right: v.$spacing-4;
       gap: v.$spacing-3;
+      padding-right: v.$spacing-4;
     }
   }
 
@@ -95,10 +94,9 @@
       max-width: 200px;
     }
     @media (max-width: v.$breakpoint-sm) {
-      // На мобільних картка займає майже всю ширину екрану
-      flex-basis: calc(100vw - 3rem);
-      max-width: calc(100vw - 3rem);
-      min-width: calc(100vw - 3rem);
+      flex-basis: 75vw;
+      max-width: 75vw;
+      min-width: 75vw;
     }
   }
 }
