--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,8 @@ html {
   scroll-behavior: smooth;
   font-size: v.$font-size-base;
   letter-spacing: v.$letter-spacing-normal;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 body {
@@ -21,6 +23,9 @@ body {
   background-color: v.$color-background;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+  max-width: 100vw;
+  position: relative;
 }
 
 p {
@@ -30,4 +35,25 @@ p {
 a {
   color: v.$brand-primary-500;
   text-decoration: none;
+}
+
+.app {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100vw;
+}
+
+.main {
+  flex: 1;
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100vw;
+  padding-top: 64px;
+
+  @media (max-width: 767px) {
+    padding-top: 56px;
+  }
 }
