--- a/src/styles/pages/Product.scss
+++ b/src/styles/pages/Product.scss
@@ -8,6 +8,9 @@
   background-color: v.$color-background;
   min-height: 100vh;
   padding-bottom: v.$spacing-16;
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100vw;
 }
 
 // ========================================
@@ -406,6 +409,9 @@
 .product-tabs {
   padding: v.$spacing-12 0;
   background-color: v.$neutral-0;
+  width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
 
   @media (max-width: v.$breakpoint-md) {
     padding: v.$spacing-8 0;
@@ -421,6 +427,7 @@
     scrollbar-width: thin;
     scrollbar-color: v.$color-border v.$neutral-100;
     -webkit-overflow-scrolling: touch;
+    max-width: 100%;
 
     &::-webkit-scrollbar {
       height: 4px;
